--- a/src/css/style.css
+++ b/src/css/style.css
@@ -562,12 +562,21 @@ video {
   position: relative;
 }
 
+.inset-y-0 {
+  top: 0px;
+  bottom: 0px;
+}
+
 .bottom-4 {
   bottom: 1rem;
 }
 
 .left-0 {
   left: 0px;
+}
+
+.left-1\/2 {
+  left: 50%;
 }
 
 .left-2 {
@@ -598,6 +607,10 @@ video {
   top: 0px;
 }
 
+.top-1\/2 {
+  top: 50%;
+}
+
 .top-2 {
   top: 0.5rem;
 }
@@ -622,9 +635,18 @@ video {
   top: 70px;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
 .mx-12 {
   margin-left: 3rem;
   margin-right: 3rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .-ml-72 {
@@ -641,6 +663,10 @@ video {
 
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .ml-0 {
@@ -661,6 +687,10 @@ video {
 
 .ml-2 {
   margin-left: 0.5rem;
+}
+
+.ml-20 {
+  margin-left: 5rem;
 }
 
 .ml-24 {
@@ -687,8 +717,16 @@ video {
   margin-right: 2.5rem;
 }
 
+.mr-4 {
+  margin-right: 1rem;
+}
+
 .mt-0 {
   margin-top: 0px;
+}
+
+.mt-0\.5 {
+  margin-top: 0.125rem;
 }
 
 .mt-1 {
@@ -697,6 +735,10 @@ video {
 
 .mt-10 {
   margin-top: 2.5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .mt-14 {
@@ -827,12 +869,20 @@ video {
   height: 315px;
 }
 
+.h-\[319\.35px\] {
+  height: 319.35px;
+}
+
 .h-\[31px\] {
   height: 31px;
 }
 
 .h-\[353px\] {
   height: 353px;
+}
+
+.h-\[35px\] {
+  height: 35px;
 }
 
 .h-\[36px\] {
@@ -895,12 +945,20 @@ video {
   height: 59.4px;
 }
 
+.h-\[60px\] {
+  height: 60px;
+}
+
 .h-\[613px\] {
   height: 613px;
 }
 
 .h-\[63px\] {
   height: 63px;
+}
+
+.h-\[64px\] {
+  height: 64px;
 }
 
 .h-\[719\] {
@@ -913,6 +971,10 @@ video {
 
 .h-\[79px\] {
   height: 79px;
+}
+
+.h-\[80px\] {
+  height: 80px;
 }
 
 .h-\[90\.52px\] {
@@ -1031,12 +1093,20 @@ video {
   width: 183px;
 }
 
+.w-\[188px\] {
+  width: 188px;
+}
+
 .w-\[193px\] {
   width: 193px;
 }
 
 .w-\[210px\] {
   width: 210px;
+}
+
+.w-\[257px\] {
+  width: 257px;
 }
 
 .w-\[263px\] {
@@ -1051,6 +1121,10 @@ video {
   width: 268px;
 }
 
+.w-\[275px\] {
+  width: 275px;
+}
+
 .w-\[292px\] {
   width: 292px;
 }
@@ -1059,8 +1133,16 @@ video {
   width: 299px;
 }
 
+.w-\[2px\] {
+  width: 2px;
+}
+
 .w-\[302px\] {
   width: 302px;
+}
+
+.w-\[314px\] {
+  width: 314px;
 }
 
 .w-\[320px\] {
@@ -1079,6 +1161,10 @@ video {
   width: 361px;
 }
 
+.w-\[382px\] {
+  width: 382px;
+}
+
 .w-\[38px\] {
   width: 38px;
 }
@@ -1089,6 +1175,10 @@ video {
 
 .w-\[416px\] {
   width: 416px;
+}
+
+.w-\[436px\] {
+  width: 436px;
 }
 
 .w-\[45px\] {
@@ -1107,6 +1197,10 @@ video {
   width: 559px;
 }
 
+.w-\[60px\] {
+  width: 60px;
+}
+
 .w-\[611px\] {
   width: 611px;
 }
@@ -1121,6 +1215,10 @@ video {
 
 .w-\[643px\] {
   width: 643px;
+}
+
+.w-\[64px\] {
+  width: 64px;
 }
 
 .w-\[658px\] {
@@ -1147,6 +1245,22 @@ video {
   max-width: 1440px;
 }
 
+.max-w-\[264\.07px\] {
+  max-width: 264.07px;
+}
+
+.max-w-\[320px\] {
+  max-width: 320px;
+}
+
+.max-w-\[330px\] {
+  max-width: 330px;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1165,6 +1279,10 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -1195,10 +1313,18 @@ video {
   gap: 1rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.self-start {
+  align-self: flex-start;
 }
 
 .overflow-x-hidden {
@@ -1233,12 +1359,20 @@ video {
   border-radius: 5px;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-bl-\[15px\] {
   border-bottom-left-radius: 15px;
 }
 
 .rounded-br-\[15px\] {
   border-bottom-right-radius: 15px;
+}
+
+.rounded-br-none {
+  border-bottom-right-radius: 0px;
 }
 
 .rounded-tl-\[4px\] {
@@ -1323,6 +1457,11 @@ video {
   background-color: rgb(255 73 139 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#cdcdce\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(205 205 206 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[\#f6f6f7\] {
   --tw-bg-opacity: 1;
   background-color: rgb(246 246 247 / var(--tw-bg-opacity, 1));
@@ -1336,6 +1475,11 @@ video {
 .bg-blue-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white {
@@ -1362,6 +1506,10 @@ video {
   --tw-gradient-to: rgba(196,196,196,0.5) var(--tw-gradient-to-position);
 }
 
+.p-0 {
+  padding: 0px;
+}
+
 .p-1 {
   padding: 0.25rem;
 }
@@ -1381,6 +1529,11 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-2 {
@@ -1436,6 +1589,10 @@ video {
   font-size: 30px;
 }
 
+.text-\[32px\] {
+  font-size: 32px;
+}
+
 .text-\[42px\] {
   font-size: 42px;
 }
@@ -1466,6 +1623,10 @@ video {
 
 .leading-10 {
   line-height: 2.5rem;
+}
+
+.leading-\[1\.2\] {
+  line-height: 1.2;
 }
 
 .leading-\[20px\] {
@@ -1527,9 +1688,19 @@ video {
   color: rgb(24 51 105 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\#898989\] {
+  --tw-text-opacity: 1;
+  color: rgb(137 137 137 / var(--tw-text-opacity, 1));
+}
+
 .text-\[\#B0B0B0\] {
   --tw-text-opacity: 1;
   color: rgb(176 176 176 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#F5f6f8\] {
+  --tw-text-opacity: 1;
+  color: rgb(245 246 248 / var(--tw-text-opacity, 1));
 }
 
 .text-\[\#FFFFFF\] {
@@ -1584,8 +1755,59 @@ video {
   transition-duration: 150ms;
 }
 
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hover\:w-\[3px\]:hover {
+  width: 3px;
+}
+
+.hover\:bg-blue-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
+}
+
+.focus\:border-transparent:focus {
+  border-color: transparent;
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-blue-600:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(37 99 235 / var(--tw-ring-opacity, 1));
+}
+
+@media (min-width: 768px) {
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:text-\[18px\] {
+    font-size: 18px;
+  }
+
+  .md\:text-\[42px\] {
+    font-size: 42px;
+  }
 }
 
 @media (min-width: 1024px) {
