--- a/src/css/style.css
+++ b/src/css/style.css
@@ -562,6 +562,10 @@ video {
   position: relative;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
 .inset-y-0 {
   top: 0px;
   bottom: 0px;
@@ -587,20 +591,8 @@ video {
   left: 1rem;
 }
 
-.left-\[210px\] {
-  left: 210px;
-}
-
-.left-\[390px\] {
-  left: 390px;
-}
-
 .right-0 {
   right: 0px;
-}
-
-.right-1 {
-  right: 0.25rem;
 }
 
 .top-0 {
@@ -615,28 +607,16 @@ video {
   top: 0.5rem;
 }
 
-.top-20 {
-  top: 5rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
-.top-\[100px\] {
-  top: 100px;
-}
-
-.top-\[1662px\] {
-  top: 1662px;
-}
-
 .top-\[70px\] {
   top: 70px;
 }
 
 .z-10 {
   z-index: 10;
+}
+
+.col-span-1 {
+  grid-column: span 1 / span 1;
 }
 
 .mx-12 {
@@ -653,10 +633,6 @@ video {
   margin-left: -18rem;
 }
 
-.-mt-16 {
-  margin-top: -4rem;
-}
-
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -667,10 +643,6 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
-}
-
-.ml-0 {
-  margin-left: 0px;
 }
 
 .ml-1 {
@@ -711,10 +683,6 @@ video {
 
 .ml-\[550px\] {
   margin-left: 550px;
-}
-
-.mr-10 {
-  margin-right: 2.5rem;
 }
 
 .mr-4 {
@@ -765,16 +733,8 @@ video {
   margin-top: 0.75rem;
 }
 
-.mt-32 {
-  margin-top: 8rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mt-40 {
-  margin-top: 10rem;
 }
 
 .mt-5 {
@@ -805,6 +765,10 @@ video {
   display: grid;
 }
 
+.h-56 {
+  height: 14rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -817,20 +781,12 @@ video {
   height: 168px;
 }
 
-.h-\[16px\] {
-  height: 16px;
-}
-
 .h-\[180px\] {
   height: 180px;
 }
 
 .h-\[215px\] {
   height: 215px;
-}
-
-.h-\[22px\] {
-  height: 22px;
 }
 
 .h-\[245px\] {
@@ -893,16 +849,8 @@ video {
   height: 38px;
 }
 
-.h-\[40px\] {
-  height: 40px;
-}
-
 .h-\[41\.25px\] {
   height: 41.25px;
-}
-
-.h-\[460px\] {
-  height: 460px;
 }
 
 .h-\[496px\] {
@@ -923,10 +871,6 @@ video {
 
 .h-\[51\.56px\] {
   height: 51.56px;
-}
-
-.h-\[516px\] {
-  height: 516px;
 }
 
 .h-\[541px\] {
@@ -965,10 +909,6 @@ video {
   height: 719;
 }
 
-.h-\[73px\] {
-  height: 73px;
-}
-
 .h-\[79px\] {
   height: 79px;
 }
@@ -1001,20 +941,12 @@ video {
   width: 1020px;
 }
 
-.w-\[108\.7px\] {
-  width: 108.7px;
-}
-
 .w-\[109px\] {
   width: 109px;
 }
 
 .w-\[110px\] {
   width: 110px;
-}
-
-.w-\[1141\.07px\] {
-  width: 1141.07px;
 }
 
 .w-\[1141px\] {
@@ -1053,10 +985,6 @@ video {
   width: 1440px;
 }
 
-.w-\[144px\] {
-  width: 144px;
-}
-
 .w-\[149px\] {
   width: 149px;
 }
@@ -1075,14 +1003,6 @@ video {
 
 .w-\[166px\] {
   width: 166px;
-}
-
-.w-\[170px\] {
-  width: 170px;
-}
-
-.w-\[180\.5px\] {
-  width: 180.5px;
 }
 
 .w-\[180px\] {
@@ -1117,20 +1037,12 @@ video {
   width: 264.07px;
 }
 
-.w-\[268px\] {
-  width: 268px;
-}
-
 .w-\[275px\] {
   width: 275px;
 }
 
 .w-\[292px\] {
   width: 292px;
-}
-
-.w-\[299px\] {
-  width: 299px;
 }
 
 .w-\[2px\] {
@@ -1151,14 +1063,6 @@ video {
 
 .w-\[322px\] {
   width: 322px;
-}
-
-.w-\[360px\] {
-  width: 360px;
-}
-
-.w-\[361px\] {
-  width: 361px;
 }
 
 .w-\[382px\] {
@@ -1185,16 +1089,8 @@ video {
   width: 45px;
 }
 
-.w-\[464px\] {
-  width: 464px;
-}
-
 .w-\[487px\] {
   width: 487px;
-}
-
-.w-\[559px\] {
-  width: 559px;
 }
 
 .w-\[60px\] {
@@ -1237,10 +1133,6 @@ video {
   max-width: 1140px;
 }
 
-.max-w-\[1141px\] {
-  max-width: 1141px;
-}
-
 .max-w-\[1440px\] {
   max-width: 1440px;
 }
@@ -1255,6 +1147,26 @@ video {
 
 .max-w-\[330px\] {
   max-width: 330px;
+}
+
+.max-w-screen-lg {
+  max-width: 1024px;
+}
+
+.max-w-xs {
+  max-width: 20rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
+}
+
+.max-w-md {
+  max-width: 28rem;
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .grid-cols-1 {
@@ -1281,6 +1193,10 @@ video {
   flex-wrap: wrap;
 }
 
+.place-items-center {
+  place-items: center;
+}
+
 .items-start {
   align-items: flex-start;
 }
@@ -1295,6 +1211,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-items-center {
+  justify-items: center;
 }
 
 .gap-0 {
@@ -1313,6 +1233,10 @@ video {
   gap: 1rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .gap-8 {
   gap: 2rem;
 }
@@ -1321,6 +1245,12 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .self-start {
@@ -1506,6 +1436,11 @@ video {
   --tw-gradient-to: rgba(196,196,196,0.5) var(--tw-gradient-to-position);
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-0 {
   padding: 0px;
 }
@@ -1549,12 +1484,13 @@ video {
   text-align: center;
 }
 
-.text-right {
-  text-align: right;
-}
-
 .font-poppins {
   font-family: Poppins, serif;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-\[15px\] {
@@ -1593,8 +1529,19 @@ video {
   font-size: 32px;
 }
 
-.text-\[42px\] {
-  font-size: 42px;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1665,12 +1612,20 @@ video {
   line-height: 36px;
 }
 
+.leading-\[48px\] {
+  line-height: 48px;
+}
+
 .leading-\[54px\] {
   line-height: 54px;
 }
 
 .leading-\[63px\] {
   line-height: 63px;
+}
+
+.leading-none {
+  line-height: 1;
 }
 
 .text-\[\#000000\] {
@@ -1749,6 +1704,20 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1759,16 +1728,18 @@ video {
   transition-duration: 300ms;
 }
 
-.ease-in {
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-}
-
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hover\:w-\[3px\]:hover {
   width: 3px;
+}
+
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:bg-blue-500:hover {
@@ -1796,7 +1767,45 @@ video {
   --tw-ring-color: rgb(37 99 235 / var(--tw-ring-opacity, 1));
 }
 
+@media (min-width: 640px) {
+  .sm\:order-last {
+    order: 9999;
+  }
+
+  .sm\:h-12 {
+    height: 3rem;
+  }
+
+  .sm\:h-9 {
+    height: 2.25rem;
+  }
+
+  .sm\:w-full {
+    width: 100%;
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .md\:mt-32 {
+    margin-top: 8rem;
+  }
+
+  .md\:w-\[210px\] {
+    width: 210px;
+  }
+
+  .md\:w-\[464px\] {
+    width: 464px;
+  }
+
+  .md\:w-\[559px\] {
+    width: 559px;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1808,10 +1817,84 @@ video {
   .md\:text-\[42px\] {
     font-size: 42px;
   }
+
+  .md\:leading-\[30\.6px\] {
+    line-height: 30.6px;
+  }
+
+  .md\:leading-\[63px\] {
+    line-height: 63px;
+  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:order-last {
+    order: 9999;
+  }
+
+  .lg\:col-span-4 {
+    grid-column: span 4 / span 4;
+  }
+
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:mt-8 {
+    margin-top: 2rem;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:h-\[36px\] {
+    height: 36px;
+  }
+
+  .lg\:h-\[460px\] {
+    height: 460px;
+  }
+
+  .lg\:h-\[49px\] {
+    height: 49px;
+  }
+
+  .lg\:w-\[1141px\] {
+    width: 1141px;
+  }
+
+  .lg\:w-\[137px\] {
+    width: 137px;
+  }
+
+  .lg\:w-\[360px\] {
+    width: 360px;
+  }
+
+  .lg\:w-\[405px\] {
+    width: 405px;
+  }
+
+  .lg\:max-w-none {
+    max-width: none;
+  }
+
+  .lg\:flex-1 {
+    flex: 1 1 0%;
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 }
